# aares

./: .gitignore  .gitmodules  CITATION.cff  IDEAS.rst  README.md  create-docs.py  h5z.py  pyproject.toml  setup.cfg  tox.ini
aares/: __init__.py  __main__.py  common.py  datafiles.py  draw2d.py  draw2d_bins.py  export.py  import_file.py  integrate.py  mask.py  merge.py  phil_test.py  plot.py  power.py  q_transformation.py  report.py  sec.py  statistics.py  subtract.py  version.py
aares/datafiles/: __init__.py  data1D.py
ares/: __init__.py  __main__.py  draw2d.py  export.py  import_file.py  integrate.py  mask.py  phil_test.py  power.py  q_transformation.py  sec.py  statistics.py  version.py
data/: LVA_2024-12_LA1.h5z  W_826mm_005Frames.h5z  function_list.py  lys_50mM_merged_file_after_detector_error.h5z
data/random_missing_lines/: PAP_LA1_Temperature_293.2K_SDD_798mm_060Frames.h5z
data/sec/SDD_793mm/: SDD_793mm_010Frames.h5z
tests/: setUp.py  tearDown.py  test_conversion.py  test_datafiles.py  test_h5z.py  test_import_file.py  test_power.py  test_statistics.py  test_subtract.py
