[metadata]
name = aares
description = Another Angular Reduction for SAXS
long_description = file: README.md, CHANGELOG.md
keywords = saxs, saxspoint, anton paar
license = GNU GPL 3
author = Jan Stránský
author_email = jan.stransky@ibt.cas.cz
url = None
platform = linux, windows
classifiers =
  "Programming Language :: Python :: 3"
  "License :: OSI Approved :: GNU GPL v3"
  "Operating System :: OS Independent"

[options]
setup_requires =
  setuptools_scm
install_requires =
  dateparser
  h5py
  numpy
  matplotlib
  freephil
  pillow
packages = find:
data= *.md
exclude_data=
  .gitignore
  data
python_requires = >= 3.8

[options.entry_points]
console_scripts =
  aares = aares.__main__:main
  aares.integrate = aares.integrate:main
  aares.mask = aares.mask:main
  aares.import = aares.import_file:main
  aares.sec = aares.sec:main

[sdist]
formats = gztar